# adversary-bot

./: README.md  pyproject.toml
adversary_bot/: __init__.py  config.py  diff_parser.py  github_client.py  models.py  prompts.py  reviewer.py
